--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/garbiprotocol/garbi-contracts#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.1",
-    "truffle-plugin-verify": "^0.6.1"
+    "truffle": "^5.8.3",
+    "truffle-plugin-verify": "^0.6.3"
   }
 }
